--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -26,21 +26,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T09:11:09.796049Z",
-     "start_time": "2024-01-18T09:11:09.770383Z"
+     "end_time": "2024-01-28T09:53:34.208975300Z",
+     "start_time": "2024-01-28T09:53:31.585114600Z"
     }
    },
    "id": "5b2a09f38ecc326c"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "33"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,8 +51,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T09:25:57.015873Z",
-     "start_time": "2024-01-18T09:25:57.006739Z"
+     "end_time": "2024-01-28T09:53:34.218911Z",
+     "start_time": "2024-01-28T09:53:34.209974200Z"
     }
    },
    "id": "fc8694982e44679e"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -90,15 +90,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T09:34:50.606451Z",
-     "start_time": "2024-01-18T09:34:12.557318Z"
+     "end_time": "2024-01-28T09:53:40.035466400Z",
+     "start_time": "2024-01-28T09:53:34.215912200Z"
     }
    },
    "id": "5209c4028ea46049"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T09:35:28.912327Z",
-     "start_time": "2024-01-18T09:35:28.910376Z"
+     "end_time": "2024-01-28T09:53:40.042499700Z",
+     "start_time": "2024-01-28T09:53:40.038482800Z"
     }
    },
    "id": "7305398ce1eb406e"
@@ -137,34 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.09818552847246724\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[9], line 48\u001B[0m\n\u001B[1;32m     46\u001B[0m q \u001B[38;5;241m=\u001B[39m QNetwork(INPUT_SIZE, EMBEDDING_SIZE, K, tensor_type, device)\n\u001B[1;32m     47\u001B[0m q\u001B[38;5;241m.\u001B[39mload_state_dict(state_l[\u001B[38;5;241m0\u001B[39m])\n\u001B[0;32m---> 48\u001B[0m \u001B[43mtest\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgraph_l\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mq\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mN_STEP\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mlen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mgraph_l\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtensor_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/Desktop/Flight-Delay/FINDER/FINDER-pytorch-new/train_utils.py:151\u001B[0m, in \u001B[0;36mtest\u001B[0;34m(validate_set, online_network, n_step, n_validate, tensor_type, device, test_set)\u001B[0m\n\u001B[1;32m    149\u001B[0m critical_nodes \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m    150\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m test_env\u001B[38;5;241m.\u001B[39mis_terminal_state():\n\u001B[0;32m--> 151\u001B[0m     Q_pred \u001B[38;5;241m=\u001B[39m online_network(\u001B[38;5;241m*\u001B[39m\u001B[43mprepare_batch\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtensor_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mtest_env\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[1;32m    152\u001B[0m     critical_nodes\u001B[38;5;241m.\u001B[39mappend(test_env\u001B[38;5;241m.\u001B[39mdeduction_step(torch\u001B[38;5;241m.\u001B[39margmax(Q_pred)))\n\u001B[1;32m    153\u001B[0m sol \u001B[38;5;241m=\u001B[39m critical_nodes \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mlist\u001B[39m(\u001B[38;5;28mset\u001B[39m(validate_set[i]\u001B[38;5;241m.\u001B[39mnodes) \u001B[38;5;241m^\u001B[39m \u001B[38;5;28mset\u001B[39m(critical_nodes))\n",
-      "File \u001B[0;32m~/Desktop/Flight-Delay/FINDER/FINDER-pytorch-new/train_utils.py:59\u001B[0m, in \u001B[0;36mprepare_batch\u001B[0;34m(q_for_all, tensor_type, device, env_list, s_t, a_t)\u001B[0m\n\u001B[1;32m     56\u001B[0m adj_mat_list \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m     57\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m env \u001B[38;5;129;01min\u001B[39;00m env_list:\n\u001B[1;32m     58\u001B[0m     adj_mat_list\u001B[38;5;241m.\u001B[39mappend(\n\u001B[0;32m---> 59\u001B[0m         torch\u001B[38;5;241m.\u001B[39mtensor(\u001B[43mnx\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43madjacency_matrix\u001B[49m\u001B[43m(\u001B[49m\u001B[43menv\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mG\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mtodense(), dtype\u001B[38;5;241m=\u001B[39mtensor_type, device\u001B[38;5;241m=\u001B[39mdevice))\n\u001B[1;32m     60\u001B[0m node_node \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mblock_diag(\u001B[38;5;241m*\u001B[39m\u001B[38;5;28mtuple\u001B[39m(adj_mat_list))\u001B[38;5;241m.\u001B[39mto_sparse_coo()\n\u001B[1;32m     61\u001B[0m \u001B[38;5;66;03m# batch_node\u001B[39;00m\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniconda/base/envs/learn_torch/lib/python3.11/site-packages/networkx/linalg/graphmatrix.py:157\u001B[0m, in \u001B[0;36madjacency_matrix\u001B[0;34m(G, nodelist, dtype, weight)\u001B[0m\n\u001B[1;32m     99\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21madjacency_matrix\u001B[39m(G, nodelist\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, dtype\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, weight\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mweight\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n\u001B[1;32m    100\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Returns adjacency matrix of G.\u001B[39;00m\n\u001B[1;32m    101\u001B[0m \n\u001B[1;32m    102\u001B[0m \u001B[38;5;124;03m    Parameters\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    155\u001B[0m \u001B[38;5;124;03m    adjacency_spectrum\u001B[39;00m\n\u001B[1;32m    156\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 157\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mnx\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mto_scipy_sparse_array\u001B[49m\u001B[43m(\u001B[49m\u001B[43mG\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnodelist\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnodelist\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mweight\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mweight\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniconda/base/envs/learn_torch/lib/python3.11/site-packages/networkx/convert_matrix.py:569\u001B[0m, in \u001B[0;36mto_scipy_sparse_array\u001B[0;34m(G, nodelist, dtype, weight, format)\u001B[0m\n\u001B[1;32m    566\u001B[0m         G \u001B[38;5;241m=\u001B[39m G\u001B[38;5;241m.\u001B[39msubgraph(nodelist)\n\u001B[1;32m    568\u001B[0m index \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mdict\u001B[39m(\u001B[38;5;28mzip\u001B[39m(nodelist, \u001B[38;5;28mrange\u001B[39m(nlen)))\n\u001B[0;32m--> 569\u001B[0m coefficients \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mzip\u001B[39;49m\u001B[43m(\u001B[49m\n\u001B[1;32m    570\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43mindex\u001B[49m\u001B[43m[\u001B[49m\u001B[43mu\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindex\u001B[49m\u001B[43m[\u001B[49m\u001B[43mv\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwt\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mu\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mv\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwt\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mG\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43medges\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mweight\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdefault\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    571\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    572\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    573\u001B[0m     row, col, data \u001B[38;5;241m=\u001B[39m coefficients\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "outputs": [],
    "source": [
     "from Q_network import QNetwork\n",
-    "from train_utils import test\n",
     "\n",
     "GAMMA = 1  # decay rate of past observations\n",
     "UPDATE_TIME = 1000\n",
@@ -206,20 +182,115 @@
     "C = UPDATE_TIME\n",
     "UPDATE_GRAPHS = 100\n",
     "tensor_type = torch.float32\n",
-    "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
-    "\n",
-    "q = QNetwork(INPUT_SIZE, EMBEDDING_SIZE, K, tensor_type, device)\n",
-    "q.load_state_dict(state_l[0])\n",
-    "test(graph_l, q, N_STEP, len(graph_l), tensor_type, device, True)"
+    "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T11:31:05.871582Z",
-     "start_time": "2024-01-18T11:30:13.361235Z"
+     "end_time": "2024-01-28T09:53:41.884720800Z",
+     "start_time": "2024-01-28T09:53:40.041488Z"
+    }
+   },
+   "id": "87cbd144057434ee"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from train_utils import prepare_batch\n",
+    "from math import floor\n",
+    "from graph_utils import accumulated_normalized_connectivity\n",
+    "def test(model, graph):\n",
+    "    g_copy:nx.Graph = graph.copy()\n",
+    "    num_remove_nodes = floor(0.01 * len(graph.nodes))\n",
+    "    \n",
+    "    deleted_nodes = []\n",
+    "    while nx.number_of_edges(g_copy) > 0:\n",
+    "        out = model(*prepare_batch(q_for_all=True,\n",
+    "                                    tensor_type=tensor_type,\n",
+    "                                    device=device,\n",
+    "                                    s_t=[torch.tensor(nx.adjacency_matrix(g_copy).todense(), device=device, dtype=tensor_type)]))\n",
+    "        node_sort = list(torch.argsort(torch.squeeze(out, dim=1)))\n",
+    "        node_id = node_sort[:num_remove_nodes]\n",
+    "        node_name = []\n",
+    "        for ni in node_id:\n",
+    "            node_name.append(list(g_copy.nodes)[ni])\n",
+    "        for nn in node_name:\n",
+    "            deleted_nodes.append(nn)\n",
+    "            g_copy.remove_node(nn)\n",
+    "    \n",
+    "    sol = deleted_nodes + list(set(graph.nodes)^set(deleted_nodes))\n",
+    "    return accumulated_normalized_connectivity(sol, graph)\n",
+    "\n",
+    "q = QNetwork(INPUT_SIZE, EMBEDDING_SIZE, K, tensor_type, device)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T09:53:42.329741400Z",
+     "start_time": "2024-01-28T09:53:41.886715100Z"
     }
    },
    "id": "cfd7216384d494de"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:35<00:00,  1.08s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "result = []\n",
+    "for i in range(len(state_l)):\n",
+    "    result.append([])\n",
+    "for i in tqdm(range(len(state_l))):\n",
+    "    q.load_state_dict(state_l[i])\n",
+    "    for j in range(1):\n",
+    "        result[i].append(test(q, graph_l[j]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T09:54:17.908396900Z",
+     "start_time": "2024-01-28T09:53:42.331741800Z"
+    }
+   },
+   "id": "8a7981483d5844c7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.33120973],\n       [0.33204198],\n       [0.33166373],\n       [0.33237493],\n       [0.33243603],\n       [0.3323136 ],\n       [0.33233662],\n       [0.33229022],\n       [0.33229275],\n       [0.33230754],\n       [0.33237102],\n       [0.33236533],\n       [0.33120568],\n       [0.33210123],\n       [0.33171588],\n       [0.33212034],\n       [0.33192174],\n       [0.33191142],\n       [0.33192632],\n       [0.33204528],\n       [0.33219768],\n       [0.33225382],\n       [0.3320153 ],\n       [0.33210947],\n       [0.33211651],\n       [0.33182098],\n       [0.33188069],\n       [0.33178112],\n       [0.33205813],\n       [0.33236529],\n       [0.33243594],\n       [0.3322575 ],\n       [0.33243872]])"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.array(result)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T09:54:35.542737400Z",
+     "start_time": "2024-01-28T09:54:35.528778300Z"
+    }
+   },
+   "id": "862dd125b525c9eb"
   }
  ],
  "metadata": {
